# intro-py

./: README.md  justfile  pyproject.toml
xavdid/: __init__.py
